# LumenGL

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  main.cpp
examples/01_triangle/: main.cpp
examples/01_triangle/shaders/: default.frag  default.vert
examples/02_cube/: main.cpp
examples/02_cube/shaders/: default.frag  default.vert
examples/03_sphere/: main.cpp
examples/03_sphere/shaders/: default.frag  default.vert
include/LumenGL/: Camera.h  EBO.h  Logger.h  Material.h  Mesh.h  RenderObject.h  RenderObjectBuilder.h  Renderer.h  Scene.h  Shader.h  ShaderProgram.h  Texture.h  Transform.h  VAO.h  VBO.h  lumen_gl.h
include/lumengl/: Context.h  lumengl.h
include/lumengl/gpu/: Buffer.h  ShaderProgram.h  Texture.h
include/lumengl/renderer/: Camera.h  Material.h  Mesh.h  Renderer.h
include/lumengl/util/: Result.h
include/renderer/: Camera.h  Mesh.h  Renderer.h  Scene.h  Transform.h  VBO.h
shaders/: default.frag  default.vert
src/: Context.cpp
src/LumenGL/: Camera.cpp  EBO.cpp  Logger.cpp  Material.cpp  Mesh.cpp  RenderObjectBuilder.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  ShaderProgram.cpp  Texture.cpp  Transform.cpp  VAO.cpp  VBO.cpp
src/gpu/: ShaderProgram.cpp  Texture.cpp
src/renderer/: Camera.cpp  Material.cpp  Mesh.cpp  Renderer.cpp  Texture.cpp  Transform.cpp  VBO.cpp
tests/: CMakeLists.txt  test_camera.cpp  test_mesh.cpp  test_result.cpp  test_shader.cpp
